fixed image issue on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@
 }
 
 .site-title {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 300;
     line-height: 56px;
     color: #212121;
@@ -53,7 +53,7 @@
         top: 9px;
         right: $spacing-unit / 2;
         background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        // border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
 
@@ -88,7 +88,7 @@
 
         .page-link {
             display: block;
-            padding: 5px 10px;
+            padding: 0px 10px;
 
             &:not(:last-child) {
                 margin-right: 0;
@@ -112,10 +112,19 @@
   margin: 0px;
 }
 
+
 .wrapper-homepage {
   min-width: 100%;
   padding: 0px;
   margin: 0px;
+}
+
+@include media-query($on-laptop) {
+    .cover {
+        min-height: 400px;
+        min-width: 800px;
+        float: right;
+    }
 }
 
 /**
@@ -156,30 +165,31 @@
 }
 
 .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(30% - (#{$spacing-unit} / 2));
+    width:         calc(30% - (#{$spacing-unit} / 2));
 }
+
+// .footer-col-2 {
+//     width: -webkit-calc(20% - (#{$spacing-unit} / 2));
+//     width:         calc(20% - (#{$spacing-unit} / 2));
+// }
 
 .footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(70% - (#{$spacing-unit} / 2));
+    width:         calc(70% - (#{$spacing-unit} / 2));
+    padding-top: 42px;
 }
 
 @include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
+    .footer-col-1 {
         width: -webkit-calc(50% - (#{$spacing-unit} / 2));
         width:         calc(50% - (#{$spacing-unit} / 2));
     }
 
-    .footer-col-3 {
+    .footer-col-2 {
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
+        padding-top: 10px;
     }
 }
 
